--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -314,7 +314,7 @@
     <string name="reboot_system" product="tablet">Reboot tablet</string>
     <string name="reboot_system" product="default">Reboot phone</string>
     <!-- Reboot Progress Dialog. This is shown if the user chooses to reboot the phone. -->
-    
+
     <!-- label for item that screenshots in phone options dialog -->
     <string name="global_action_screenshot">Screenshot</string>
 
@@ -341,8 +341,7 @@
     <!-- Reboot Progress Dialog. This is shown if the user chooses to reboot the phone. -->
     <string name="reboot_progress">Rebooting\u2026</string>
     <!-- Reboot Confirmation Dialog.  When the user chooses to reboot the phone, there will be a confirmation dialog.  This is the message. -->
-    <string name="reboot_confirm" product="tablet">Your tablet will reboot.</string>
-    <string name="reboot_confirm" product="default">Your phone will reboot.</string>
+    <string name="reboot_confirm">Your phone will reboot.</string>
 
     <!-- Spoken description for ringer silent option. [CHAR LIMIT=NONE] -->
     <string name="silent_mode_silent">Ringer off</string>
@@ -426,8 +425,8 @@
     <!-- status message in phone options dialog for when airplane mode is off -->
     <string name="global_actions_airplane_mode_off_status">Airplane mode is OFF</string>
 
-    <!-- label for item that toggles NavBar Hide -->
-    <string name="global_actions_toggle_navbar_hide">Navigation Bar Controls</string>
+    <!-- label for item that toggles Navbar Hide -->
+    <string name="global_actions_toggle_navbar_hide">Navbar Controls</string>
 
     <!-- Text to use when the number in a notification info is too large
          (greater than status_bar_notification_info_maxnum, defined in
@@ -4068,5 +4067,4 @@
 
     <!-- In WiFi notification -->
     <string name="notify_turn_wifi_off_title">Turn Wi-Fi off</string>
-
 </resources>
