--- a/core/res/res/values-iw/strings.xml
+++ b/core/res/res/values-iw/strings.xml
@@ -1395,7 +1395,7 @@
     <string name="default_audio_route_name" product="tablet" msgid="4617053898167127471">"טאבלט"</string>
     <string name="default_audio_route_name" product="default" msgid="4239291273420140123">"טלפון"</string>
     <string name="default_audio_route_name_headphones" msgid="8119971843803439110">"אוזניות"</string>
-    <string name="default_audio_route_name_dock_speakers" msgid="6240602982276591864">"רמקולים של מעגן"</string>
+    <string name="default_audio_route_name_dock_speakers" msgid="6240602982276591864">"רמקולים של תחנת עגינה"</string>
     <string name="default_media_route_name_hdmi" msgid="2450970399023478055">"HDMI"</string>
     <string name="default_audio_route_category_name" msgid="3722811174003886946">"מערכת"</string>
     <string name="bluetooth_a2dp_audio_route_name" msgid="8575624030406771015">"אודיו Bluetooth"</string>
@@ -1457,7 +1457,7 @@
     <string name="user_switched" msgid="3768006783166984410">"המשתמש הנוכחי <xliff:g id="NAME">%1$s</xliff:g>."</string>
     <string name="owner_name" msgid="2716755460376028154">"בעלים"</string>
 
-<!-- CyanogenMod Edits Start -->
+<!-- **** CYANOGENMOD ADDITIONS START **** -->
 
 <!-- Profile names -->
     <!-- Names of default profiles. -->
@@ -1527,17 +1527,22 @@
 <!-- Lock Screen -->
 
    <!-- Discharging -->
-    <string name="lockscreen_discharging">פורק(<xliff:g id="number">%d</xliff:g><xliff:g id="percent">%%</xliff:g></string>
+    <string name="lockscreen_discharging">פורק(<xliff:g id="number">%d</xliff:g><xliff:g id="percent">%%</xliff:g>)</string>
 
 <!-- Pop-Up messages -->
 
     <!-- Long-press back kill application -->
     <string name="app_killed_message">התהליך נסגר</string>
 
+<!-- Dock -->
+
+    <!-- Storage description for the SD card on the dock. [CHAR LIMIT=NONE] -->
+    <string name="storage_sd_dock_card">כרטיס SD של תחנת עגינה</string>
+
 <!-- Unknown -->
 
     <!-- Hardware Rotation lock string -->
     <string name="toast_rotation_unlocked">סיבוב אוטומטי</string>
     <string name="toast_rotation_locked">סיבוב נעול</string>
-<!-- CyanogenMod Edits End -->
+<!-- **** CYANOGENMOD ADDITIONS END **** -->
 </resources>
