--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -601,4 +601,10 @@
     <string name="calendar_error_alert">No Calendar app installed.</string>
     <string name="clock_error_alert">No DeskClock app installed.</string>
 
+    <!-- PIE PIE PIE PIE PIE PIE PIE PIE PIE PIE PIE PIE -->
+    <string name="pie_date_format">ccc, dd MMM yyyy</string>
+    <string name="pie_hour_format_12">hh:mm</string>
+    <string name="pie_hour_format_24">HH:mm</string>
+    <string name="pie_am_pm">a</string>
+
 </resources>
